# solana-token-risk-lens

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/birdeye/: client.rs  errors.rs  holders.rs  mod.rs  overview.rs  price.rs
backend/src/routes/: analyze.rs  health.rs  mod.rs
backend/src/scoring/: context_risk.rs  holders.rs  holders_risk.rs  liquidity_risk.rs  mod.rs  momentum_risk.rs  summary.rs
backend/src/types/: api.rs  app.rs  birdeye.rs  mod.rs  risk.rs
backend/src/utils/: validation.rs
frontend/: index.html
frontend/src/: App.css  App.tsx
frontend/src/components/: DataSources.tsx  Disclaimer.tsx  HolderMetrics.tsx  ManualChecks.tsx  RedFlags.tsx  RiskSummary.tsx  ScoreBreakdown.tsx
frontend/src/lib/: api.ts  format.ts
frontend/src/types/: risk.ts
